-----------------------------------------------------

All changes by Steve Purkis, unless otherwise noted.

0.08
    +	applied Steffen Schwigon's patch to display YAML TAP as
	pre-formatted text.
    +	fixed RT #43871: missing dep on File::Temp 0.17
	[reported by Paddy Newman]
    +	fixed RT #37983: CSS and JS Paths on Win32 get mangled
	and documented solution. [reported by Chris Davaz]

0.07
    +	you can now specify an output file for the HTML to be written to!
    +	you can now set some config params using environment vars. this should
	make it easier to configure without having to write custom code.
    +	started writing an App::Prove plugin
    +	fixed RT #40306: Typo in TAP::Formatter::HTML (incline_js)
	(also reported by Nathan S. Watson-Haigh)
    +	applied patch from Michael Hendricks (who's work on this was sponsored
	by Grant Street Group) for a bug he & others identified:
	If tests are aggregated in multiple phases (per http://xrl.us/bedfih),
	... the HTML output shows only the results from the final phase.
    +	finally wrote some more tests, though selenium tests still not done
    +	fixed RT #41411: fails on empty directory
    *	started using IO::* modules for stdout & output_fh

0.06
    +	fixed RT #37019: tempdir without cleanup [reported by Steffen Schwigon]

0.05
    +	fixed width issue: test files with hundreds of tests were causing
	uncontrollable width in summary, making the report pretty annoying
	to read.
    +	added toggle to display all / failed tests [requested by Alex Monney]
    +	highlight failed test file names
    +	reduced the size of generated HTML by a further ~10-35% (depending on
	the number of tests you run):
	  * set test title on mouse-over so it's included only once
    *	moved inline JS out of default_report.tt2 to its own file that is
	included by default.
    *	split css into 'page' & 'report' for ease of user maintainability.
	[requested by Steffen Schwigon]