@@ -26,16 +26,21 @@ $(document).ready(function(){
 
 	// expand test detail when user clicks on an individual test
 	$("a.TS").click(function(){
-		var testId = $(this).attr("href")
 		// go all the way to the tr incase table structure changes:
 		var $detail = $(this).parents("td.results").parents("tr:first").find("div.test-detail");
 		$detail.filter(":hidden").slideDown();
-		var $testElem = $detail.find(testId);
-		$testElem.show().scrollTo(1000);
-		var bgColor = $testElem.css("background-color");
-		$testElem.css({ backgroundColor: "yellow" });
-		// shame you can't animate bg color w/o a plugin...
-		setTimeout(function(){$testElem.css({ backgroundColor: bgColor })}, 3000);
+
+		// highlight a particular test?
+		var testId = $(this).attr("href");
+		if (!testId) {
+		    var $testElem = $detail.find(testId);
+		    $testElem.show().scrollTo(1000);
+		    var bgColor = $testElem.css("background-color");
+		    $testElem.css({ backgroundColor: "yellow" });
+		    // shame you can't animate bg color w/o a plugin...
+		    setTimeout(function(){$testElem.css({ backgroundColor: bgColor })}, 3000);
+		}
+
 		return false;
 	});
 
